--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,9 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "pg": "^8.16.3",
-    "sequelize": "^6.37.7"
+    "pg": "^8.11.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3"
   }
 }
